tests/errors/algo_sort_missing_ref.ptt
use std/list
use std/algo

spark {
  xs is List of int
  algo.sort_ints(xs)
}
